# adventofcode-2022-rust

./: Cargo.toml  README.md
src/: day.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  main.rs
src/day01/: part1.rs
