[package]
name = "adventofcode-2022-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "unstable-doc"] }
concolor-clap = "0.0.13"
regex = "1.7.0"
